# ml-mathematics

./: pyproject.toml
notebooks/: Basis-Change-Copy1.ipynb  Basis-Change.ipynb  Eigenvectors-Eigenvalues.ipynb  Matrix-Multiplication.ipynb
notebooks/.ipynb_checkpoints/: Eigenvectors-Eigenvalues-checkpoint.ipynb  Matrix-Multiplication-checkpoint.ipynb
